Mettre au propre le README avec toutes les informations utiles pour le projet final